--- a/generateMatches/index.html
+++ b/generateMatches/index.html
@@ -26,134 +26,135 @@
 
       <div class="team-names">
         <h2>Selecione os times</h2>
-
-        <div class="teams-select">
-        </div>
+        <div class="teams-select"></div>
         <button id="generate-btn">Gerar tabela</button>
       </div>
 
+      <div class="matches-table-container">
+        <h2>Suas partidas</h2>
+        <table id="matches-table">
+          <tr class="matches">
+            <td id="one-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="one-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="one-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="one-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="two-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="two-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="two-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="two-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="three-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="three-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="three-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="three-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="four-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="four-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="four-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="four-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="five-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="five-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="five-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="five-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="six-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="six-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="six-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="six-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="seven-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="seven-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="seven-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="seven-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="eight-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="eight-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="eight-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="eight-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="nine-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="nine-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="nine-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="nine-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="ten-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="ten-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="ten-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="ten-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="eleven-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="eleven-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="eleven-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="eleven-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="twelve-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="twelve-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="twelve-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="twelve-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="thirteen-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="thirteen-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="thirteen-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="thirteen-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="fourteen-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="fourteen-team-two" class="second"></td>
+          </tr>
 
-      <tr class="matches">
-        <td id="fourteen-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="fourteen-team-two" class="second"></td>
-      </tr>
+          <tr class="matches">
+            <td id="fifteen-team-one" class="first"></td>
+            <td><input type="number" class="score first"></td>
+            <td>x</td>
+            <td><input type="number" class="score second"></td>
+            <td id="fifteen-team-two" class="second"></td>
+          </tr>
+        </table>
+      </div>
 
-      <tr class="matches">
-        <td id="fifteen-team-one" class="first"></td>
-        <td><input type="number" class="score first"></td>
-        <td>x</td>
-        <td><input type="number" class="score second"></td>
-        <td id="fifteen-team-two" class="second"></td>
-      </tr>
-
-      </table>
 
       <table id="qualifying">
         <tr class="qualifying-table-header">
@@ -166,17 +167,18 @@
           <th>SG</th>
         </tr>
 
-        <td class="qualify">
-          <h5 class="position">5</h5>
-          <image class="team-logo" src="" />
-          <h5 class="team-name">Barcelona</h5>
-          </th>
-        <td class="points">9</td>
-        <td class="matches-played">4</td>
-        <td class="wins">3</td>
-        <td class="draws">0</td>
-        <td class="defeats">1</td>
-        <td class="goals-diff">-1</td>
+        <tr class="qualify-row">
+          <td class="qualify">
+            <h5 class="position">5</h5><img src="" alt="" class="team-logo">
+            <h5 class="team-name"></h5>Barcelona
+          </td>
+          <td class="points">9</td>
+          <td class="matches-played">9</td>
+          <td class="matches-played">4</td>
+          <td class="wins">3</td>
+          <td class="defeats">2</td>
+          <td class="goals-diff">2</td>
+        </tr>
       </table>
     </div>
   </main>
