--- a/generateMatches/index.html
+++ b/generateMatches/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div id="team-names-container" class="team-names">
-          <h2>Selecione os times</h2>
+          <h2>Escolha os times</h2>
           <div class="teams-select"></div>
           <button id="generate-btn">Gerar tabela</button>
         </div>
